# fs6

./: .dockerignore  .gitignore  Dockerfile  README.md  fs6.cabal  stack.yaml  testFile_hd.csv
config/: config.ini  models  routes
src/: Config.hs  Dispatch.hs  Foundation.hs  Main.hs  Model.hs
src/Handler/: Download.hs  Home.hs  Preview.hs
src/Parsers/: INIParser.hs
src/Text/: NewsAPI.hs
src/Yadata/: LibAPI.hs
templates/: home.hamlet
