name:                fs6
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fs6#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


executable file-processor
  hs-source-dirs:      src
                    ,  src/Yadata
                    ,  src/Parsers
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -O2
  other-modules:       Foundation
                       Dispatch
                       Config
                       Model
                       Handler.Home
                       Handler.Preview
                       Handler.Download
                       -- Yadata
                       Yadata.LibYahoo
                       Yadata.LibCSV
                       Yadata.LibTS
                       Yadata.LibAPI
                       -- Utils/Parsers
                       Parsers.INIParser
  build-depends:       base >= 4.7 && < 5
                    ,  blaze-markup
                    ,  bytestring
                    ,  conduit
                    ,  conduit-extra
                    ,  containers
                    ,  data-default
                    -- ,  hamlet
                       --
                    ,  resourcet
                    ,  transformers
                       --
                    ,  safe
                    ,  shakespeare
                    ,  stm
                    ,  text
                    ,  time
                    ,  yesod
                    ,  persistent 
                    -- 
                    ,  persistent-postgresql
                    ,  resource-pool
                    ,  yesod-persistent
                    ,  monad-logger
                    --
                    ,  read-env-var
                    -- yadata : start
                    ,  lens
                    ,  time
                    ,  regex-pcre-builtin
                    ,  http-client-tls
                    ,  http-client
                    ,  wreq
                    ,  csv
                    ,  utf8-string
                    ,  Chart
                    ,  Chart-diagrams
                    ,  Chart-cairo
                    -- yadata : end
                    